[project]
name = "noahpy"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "matplotlib>=3.10.7",
    "numpy>=2.3.4",
    "pandas>=2.3.3",
    "psutil>=7.1.2",
    "pytest>=8.4.2",
    "torch>=2.9.0",
    "typing>=3.10.0.0",
]
