[project]
name = "NoahPy"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "matplotlib>=3.10.7",
    "numpy>=2.3",
    "pandas>=2.3.3",
    "psutil>=7.1.2",
    "pytest>=8.4.2",
    "pytest-cov>=7.0.0",
    "torch>=2.9.0",
]

[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = { find = { where = ["."], include = ["NoahPy"] } }
